--- a/seminarReport/stylesheet.css
+++ b/seminarReport/stylesheet.css
@@ -234,11 +234,6 @@ header {
         right: 4vw;
     }
 
-    .breadcrumb {
-        margin-top: 22%;
-        font-size: x-small;
-    }
-
     h1 {
         font-size: x-large;
     }
@@ -352,6 +347,12 @@ body {
     color: blue;
 }
 
+@media (max-width:768){
+    .breadcrumb {
+        margin-top: 22%;
+        font-size: x-small;
+    }
+}
 h1 {
     margin-left: 10%;
 
@@ -516,9 +517,23 @@ section {
     padding: 15px;
     margin: auto 20px;
     background-color: black;
+    text-decoration: none;
     align-items: center;
     display: flex;
     justify-content: center;
+}
+
+.o-btn__square__black::before{
+    display: block;
+    position: absolute;
+    right: 25px;
+    top: 18px;
+    width: 12px;
+    height: 16px;
+    background: url(../assets/img/common/icon_arrow.svg) no-repeat;
+    background-size: contain;
+    content: "";
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
 }
 
 .black-btn:hover {
@@ -535,10 +550,12 @@ section {
 }
 
 .btn-place {
+    position: relative;
     width: 400px;
     padding: 30px;
     line-height: 1;
-    background-color: black;
+    background-color:black;
+    text-decoration: none;
     align-items: center;
     display: flex;
     justify-content: center;
@@ -552,6 +569,19 @@ section {
     text-decoration: none;
     color: white;
 }
+
+.btn::before{
+    display: block;
+    position: absolute;
+    right: 50px;
+    width: 12px;
+    height: 16px;
+    background: url(../assets/img/common/icon_arrow.svg) no-repeat;
+    background-size: contain;
+    content: "";
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
+}
+
 
 footer {
     background-color: #222222;
