--- a/column/03/stylesheet.css
+++ b/column/03/stylesheet.css
@@ -234,10 +234,6 @@ header {
         right: 4vw;
     }
 
-    h1 {
-        font-size: x-large;
-    }
-
     .footer-box {
         align-items: center;
         display: flex;
@@ -347,15 +343,24 @@ body {
     color: blue;
 }
 
-@media (max-width:768){
+@media (max-width:768px){
     .breadcrumb {
-        margin-top: 22%;
-        font-size: x-small;
+        display: none;
     }
 }
 h1 {
     margin-left: 10%;
+    margin-right: 10%;
+    line-height: 2;
+    font-size:  2.7vw;
+}
 
+@media (max-width:768px) {
+    
+    h1{
+        margin-top: 120px;
+        font-size: 4.1vw;
+    }
 }
 
 h2 {
@@ -380,8 +385,11 @@ p {
 
 }
 
+@media (min-width:768px){
+
 .headline {
     margin-top: 5%;
+}
 }
 
 .date {
