--- a/column/03/stylesheet.css
+++ b/column/03/stylesheet.css
@@ -266,12 +266,6 @@ header {
         margin: 5% 10%;
     }
 
-    .btn-box {
-        margin-top: 10%;
-        flex-direction: column;
-        align-items: center;
-    }
-
     .img-p {
         height: 200px;
         width: 200px;
@@ -342,6 +336,12 @@ body {
         display: none;
     }
 }
+
+.starting {
+    width: 800px;
+    margin-top: 50px;
+}
+
 h1 {
     margin-left: 10%;
     margin-right: 10%;
@@ -356,6 +356,14 @@ h1 {
         font-size: 4.1vw;
     }
 }
+
+@media (min-width:1024px){ 
+    .main-body{
+    width: 70%;
+    margin-inline: auto;
+    }
+}
+
 
 h2 {
     margin-left: 10%;
@@ -519,9 +527,21 @@ section {
 .column-title {
     text-align: center;
     font-weight: bold;
-    list-style: none;
-    font-size: 16pt;
+    font-size: 1.5vw;
+    line-height: 2;
     align-self: center;
+}
+
+@media (max-width:768px){
+    .column-title {
+        font-size: 18px;
+    }
+}
+
+@media (max-width:1024px) {
+    .column-title {
+        font-size: 20px;
+    }
 }
 
 .p-column-list {
@@ -575,7 +595,6 @@ section {
 
 .btn-place {
     position: relative;
-    width: 400px;
     padding: 30px;
     line-height: 1;
     background-color:black;
@@ -583,6 +602,25 @@ section {
     align-items: center;
     display: flex;
     justify-content: center;
+}
+
+@media (min-width:768px){
+
+    .btn-place{ 
+        min-width: 300px;
+    }
+}
+
+@media (max-width:768px){
+    .btn-box {
+        margin-top: 10%;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .btn-place {
+        width: 250px;
+    }
 }
 
 .btn-place:hover {
