--- a/column/03/stylesheet.css
+++ b/column/03/stylesheet.css
@@ -483,7 +483,7 @@ p {
 
 .img-ad-ad {
     width: 280px;
-  height: 290px;
+  height: auto;
   margin: 30px auto;
 }
 
@@ -530,8 +530,8 @@ section {
     flex-direction: column;
     align-items: center;
     border: 2px solid #000;
-    width: 100%;
-    padding: 30px;
+    width: 80%;
+    padding-block: 30px;
 }
 
 .column-title {
@@ -541,6 +541,7 @@ section {
     line-height: 1.5;
     align-self: center;
 }
+
 
 .column-title-b {
     text-align: center;
