--- a/column/03/stylesheet.css
+++ b/column/03/stylesheet.css
@@ -530,8 +530,8 @@ section {
     flex-direction: column;
     align-items: center;
     border: 2px solid #000;
-    width: 80%;
-    padding-block: 30px;
+    width: 100%;
+    padding: 30px;
 }
 
 .column-title {
@@ -541,7 +541,6 @@ section {
     line-height: 1.5;
     align-self: center;
 }
-
 
 .column-title-b {
     text-align: center;
