--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1942,6 +1942,9 @@ summary::-webkit-details-marker {
   background-color: #000;
   color: #fff;
 }
+.o-btn__square.o-btn__square.is__black.mt100{
+  margin-top: 5.3vw;
+}
 .o-btn__square.is__black::before {
   -webkit-filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
           filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
@@ -1966,7 +1969,8 @@ summary::-webkit-details-marker {
 .o-btn__wrap_column {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -1974,12 +1978,15 @@ summary::-webkit-details-marker {
 }
 @media (max-width: 768px) {
   .o-btn__wrap_column {
+    grid-template-columns: repeat(1,1fr);
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
   }
 }
+
+
 
 .o-case-thumbnail {
   display: block;
