--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2035,13 +2035,13 @@ summary::-webkit-details-marker {
   .sorting_a{
     display: block;
     height: fit-content;
-    padding: 15px;
+    padding: 15px 12px;
     gap: 20px;
   }
   .sorting_b{
     display: block;
     height: fit-content;
-    padding: 15px;
+    padding: 15px 12px;
     gap: 20px;
   }
 }
@@ -2082,7 +2082,7 @@ summary::-webkit-details-marker {
 }
 .sorting_btn{
   display: grid;
-  gap: 20px;
+  gap: 15px;
   grid-template-columns: repeat(3, 1fr);
   text-align: center;
   align-items: center;
@@ -2090,7 +2090,7 @@ summary::-webkit-details-marker {
 @media (max-width: 768px) {
   .sorting_btn{
     grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
+    gap: 8px;
   }
 }
 .sort_txt{
@@ -2102,7 +2102,7 @@ summary::-webkit-details-marker {
 }
 @media (max-width:768px){
   .sort_txt{
-    font-size: 12px;
+    font-size: 10px;
   }
 }
 
