--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3679,6 +3679,38 @@ summary::-webkit-details-marker {
   font-size: smaller;
 }
 
+.profile{
+  margin-inline: 40px;
+  max-width: 800px;
+  justify-self: center;
+  font-family: Noto Sans JP;
+}
+.title_profile{
+  font-size: 18px;
+  font-weight: bold;
+}
+.profile_info{
+  display: flex;
+  gap: 30px;
+  margin-block: 40px;
+}
+.profile_name{
+  font-size: 20px;
+  font-weight:bold;
+}
+.profile_title{
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+.profile_text{
+  font-size: 16px;
+}
+
+.profile_image{
+  width: 240px;
+  border-radius: 100%;
+}
+
 .p-faq {
   padding-bottom: 100px;
 }
