--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3705,20 +3705,80 @@ summary::-webkit-details-marker {
   font-weight: bold;
   margin-block: 30px;
 }
+@media (max-width:768px){
+  .h2_04{
+    font-size: 20px;
+  }
+  .h3_04{
+    font-size: 18px;
+  }
+}
 .p_04{
   margin-block: 20px;
+  font-size: 16px;
 }
+.narrative{
+  font-size: 16px;
+  margin-top: 5px;
+  margin-bottom: 30px;
+}
+@media (max-width: 768px){
+  .narrative{
+    font-size: 14px;
+  }
+}
+.p_box{
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+.p_box2{
+  font-size: 16px;
+}
+.p_box3{
+  font-size: 16px;
+  margin-top: 15px;
+}
+@media (max-width:768px){
+  .p_04{
+    font-size: 14px;
+    margin-block: 15px;
+  }
+  .p_box{
+    font-size: 14px;
+  }
+  .p_box2{
+    font-size: 14px;
+  }
+  .p_box3{
+    font-size: 14px;
+  }
+}
+.top_margin{
+  margin-top: 10px;
+}
+.bottom_margin{
+  margin-bottom: 10px;
+}
+
 .profile{
   margin-inline: 40px;
   max-width: 800px;
   justify-self: center;
   font-family: Noto Sans JP;
   margin-top: 100px;
+  margin-bottom: 50px;
 }
 .title_profile{
   font-size: 20px;
   font-weight: bold;
+  margin-bottom: 30px;
 
+}
+@media (max-width:768px){
+  .title_profile{
+    text-align: center;
+    font-size: 18px;
+  }
 }
 .profile_info{
   display: flex;
@@ -3791,10 +3851,23 @@ summary::-webkit-details-marker {
   list-style:disc;
   list-style-position: inside;
 }
+@media (max-width:768px){
+  .numerical li {
+    font-size: 14px;
+  }
+  .dot li{
+    font-size: 14px;
+  }
+}
 .txt_box{
   background: rgba(255, 174, 0, 0.17);
   padding: 15px 30px;
-  margin-block: 60px;
+  margin-block: 50px;
+}
+.txt_box_bottom{
+  background: rgba(255, 174, 0, 0.17);
+  padding: 15px 30px;
+  margin-top: 50px;
 }
 .txt_box_2{
   background: rgba(255, 174, 0, 0.17);
@@ -3804,14 +3877,21 @@ summary::-webkit-details-marker {
 }
 .txt_title{
   font-weight: bold;
+  font-size: 17px;
   margin-top: 30px;
   margin-bottom: 20px;
+}
+@media (max-width:768px){
+  .txt_title{
+    font-size: 15px;
+  }
 }
 .txt_bold{
   font-weight: bold;
 }
 .txt_mark{
   font-size: smaller;
+  margin-top: 10px;
 }
 .table table{
   margin-block: 60px;
