--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3683,6 +3683,18 @@ summary::-webkit-details-marker {
     font-size: 5vw;
   }
 }
+@media (min-width:1280px){
+  .column04_title_section{
+    max-width: 1000px;
+    margin-inline: auto;
+  }
+  .column04_title{
+    font-size: 1.9vw;
+  }
+  .head_img{
+    max-width: 900px;
+  }
+}
 .column04_date{
   font-size: 16px;
 }
