--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3685,14 +3685,19 @@ summary::-webkit-details-marker {
 }
 @media (min-width:1280px){
   .column04_title_section{
-    max-width: 1000px;
+    max-width: 800px;
     margin-inline: auto;
   }
   .column04_title{
-    font-size: 1.9vw;
+    font-size: 29.5px;
+    justify-self: center;
   }
   .head_img{
     max-width: 900px;
+  }
+  .column04_date{
+    font-size: 16px;
+
   }
 }
 .column04_date{
